Bugfix in menu z-index

--- a/TCMSFRONTEND/Views/Assets/less/project/header.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/header.less
@@ -1,5 +1,5 @@
 #header {
-    position: relative; box-shadow: 0 0 3px #989898; z-index: 80;
+    position: relative; box-shadow: 0 0 3px #989898; z-index: 800;
     a {
 	transition: all 0.2s; text-decoration: none;
 	&:link, &:active, &:visited { color: @green; }
